# 1_bilhao_de_linhas

./: README.md  pyproject.toml
src/: converter_parquet.py  creat_csv.py  duck_csv.py  duck_parquet.py  python_puro.py
