[project]
name = "projeto_1_bilhao_csv"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Figueiredo",email = "samuel.lobo2004@gmail.com"}
]

[tool.poetry.dependencies]
python = "3.12.1"
duckdb = "1.4.0"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"